<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:scrollbars="vertical"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/address_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/colorTileTitle"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dairy"
            android:id="@+id/imageView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="2dp"
            android:gravity="center_vertical"
            android:text="@string/office_address_title"
            android:textColor="@color/white"
            android:textStyle="bold"

            />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/office_address"
        android:layout_weight="20"
        android:textStyle="bold"

        />

    <LinearLayout
        android:id="@+id/email_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/colorTileTitle"
        android:orientation="horizontal" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mail"
            android:id="@+id/imageView1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="2dp"
            android:gravity="center_vertical"
            android:text="@string/office_email_title"
            android:textColor="@color/white"
            android:textStyle="bold"

            />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:gravity="top"
        android:text="@string/office_email"
        android:layout_weight="20"
        android:textStyle="bold"

        />


    <LinearLayout
        android:id="@+id/contact_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/colorTileTitle"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_contact"
            android:id="@+id/imageView2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/office_contact_title"
            android:textColor="@color/white"
            android:textStyle="bold"

            />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:text="@string/office_contact"
        android:layout_weight="20"
        android:gravity="top"
        android:textStyle="bold"

        />
</LinearLayout>