<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/register_user"
    android:background="@drawable/vishwas_bg"
    tools:context=".LoginActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />
    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_gray">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout android:id="@+id/plus_sign_out_buttons"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:visibility="gone" android:weightSum="2">

                <Button android:id="@+id/plus_sign_out_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="match_parent"
                    android:layout_weight="1" android:text="@string/plus_sign_out" />

                <Button android:id="@+id/plus_disconnect_button"
                    style="?android:textAppearanceSmall" android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1"
                    android:text="@string/plus_disconnect" />

            </LinearLayout>

            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical"

                android:layout_marginTop="15dp"
                android:padding="20dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:weightSum="100">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/sign_in_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="45"
                        android:background="@drawable/button_selector"
                        android:text="Google"/>


                    <Button
                        android:id="@+id/proceed"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp" android:layout_height="50dp"
                        android:text="Proceed"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="45"
                        android:textStyle="bold"
                        android:background="@drawable/button_selector"
                        android:drawableRight="@drawable/ic_next"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:weightSum="100">

                    <EditText android:id="@+id/firstname" android:layout_width="0dp"
                        android:layout_weight="90"
                        android:layout_height="wrap_content" android:hint="@string/prompt_firstname"
                        android:imeActionLabel="@string/action_sign_in"
                        android:layout_marginTop="15dp"
                        android:imeOptions="actionUnspecified" android:inputType="text"
                        android:maxLines="1" android:singleLine="true" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/alert_fname"
                        android:gravity="center"
                        android:visibility="gone"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_alert"
                        android:layout_weight="10" />


                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:weightSum="100">

                    <EditText android:id="@+id/lastname" android:layout_width="0dp"
                        android:layout_weight="90"
                        android:layout_height="wrap_content" android:hint="@string/prompt_lastname"
                        android:imeActionLabel="@string/action_sign_in"

                        android:imeOptions="actionUnspecified" android:inputType="text"
                        android:maxLines="1" android:singleLine="true" />
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/alert_lname"
                        android:gravity="center"
                        android:visibility="gone"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_alert"
                        android:layout_weight="10" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:weightSum="100">

                    <AutoCompleteTextView android:id="@+id/email" android:layout_width="0dp"
                        android:layout_weight="90"
                        android:layout_height="wrap_content" android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress" android:maxLines="1"
                        android:singleLine="true" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/alert_email"
                        android:gravity="center"
                        android:visibility="gone"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_alert"
                        android:layout_weight="10" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:weightSum="100">
                    <EditText android:id="@+id/password" android:layout_width="0dp"
                        android:layout_weight="90"
                        android:layout_height="wrap_content" android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_sign_in"

                        android:imeOptions="actionUnspecified" android:inputType="textPassword"
                        android:maxLines="1" android:singleLine="true" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/alert_password"
                        android:gravity="center"
                        android:visibility="gone"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_alert"
                        android:layout_weight="10" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:weightSum="100">
                    <EditText
                        android:id="@+id/mobile"
                        android:layout_width="0dp"
                        android:layout_weight="90"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_mobile"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_gravity="center_horizontal" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/alert_mobile"
                        android:gravity="center"
                        android:visibility="gone"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_alert"
                        android:layout_weight="10" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:weightSum="100">
                    <EditText
                        android:id="@+id/address"
                        android:layout_width="0dp"
                        android:layout_weight="90"
                        android:layout_height="140dp"
                        android:hint="@string/prompt_address"
                        android:imeActionLabel="@string/action_sign_in"
                        android:gravity="top"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="5"
                        />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/alert_address"
                        android:gravity="center"
                        android:visibility="gone"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_alert"
                        android:layout_weight="10" />
                </LinearLayout>


                    <TextView
                        android:id="@+id/google_location"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:hint="@string/prompt_google_Location"
                        android:ellipsize="end"
                        android:inputType="textMultiLine"
                        android:maxLines="3"
                        android:lines="3"
                        android:singleLine="false"
                        />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>



