<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@drawable/vishwas_bg"
 tools:context=".LoginActivity">
    <include
        android:id="@+id/toolbar"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_width="match_parent"
        layout="@layout/toolbar"

        />
    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="0dp"
android:layout_weight="80"
        android:background="@color/transparent_gray">
        <LinearLayout android:layout_width="match_parent" android:layout_height="fill_parent"
            android:weightSum="100"
            android:orientation="vertical">

            <LinearLayout android:id="@+id/plus_sign_out_buttons"
                android:layout_width="match_parent" android:layout_height="0dp"
                android:layout_weight="45"
                android:visibility="gone" android:weightSum="2">

                <Button android:id="@+id/plus_sign_out_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="match_parent"
                    android:layout_weight="1" android:text="@string/plus_sign_out" />

                <Button android:id="@+id/plus_disconnect_button"
                    style="?android:textAppearanceSmall" android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1"
                    android:text="@string/plus_disconnect" />

            </LinearLayout>

            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="0dp" android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_weight="45"
                android:padding="20dp">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:text="9545750033"
                    android:singleLine="true" />

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_sign_in"
                    android:layout_marginTop="15dp"
                    android:text="mypwd"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100">

                    <Button android:id="@+id/sign_in" style="?android:textAppearanceSmall"
                        android:layout_width="0dp" android:layout_height="wrap_content"
                        android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                        android:background="@drawable/button_selector"
                        android:layout_weight="45"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp" android:layout_height="wrap_content"
                        android:layout_weight="10"
                         />

                    <Button android:id="@+id/register_button" style="?android:textAppearanceSmall"
                        android:layout_width="0dp" android:layout_height="wrap_content"
                        android:layout_weight="45"
                        android:layout_marginTop="16dp" android:text="@string/action_register"
                        android:background="@drawable/button_selector"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    </LinearLayout>


            </LinearLayout>


        <LinearLayout  android:layout_width="match_parent"
            android:layout_height="0dp" android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_weight="15"
            android:weightSum="100"
            >

            <View
                android:layout_width="0dp" android:layout_height="2dp"
                android:layout_weight="45"
                android:gravity="center"

                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                />

            <TextView
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="top|center"
                android:layout_gravity="center"
                     android:text="OR"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />
            <View
                android:layout_width="0dp" android:layout_height="2dp"
                android:layout_weight="45"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                />
            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="45"
                android:weightSum="100">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:text="Google"/>

            </LinearLayout>




        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@color/transparent_gray"
        android:layout_weight="10">

        <Button
            android:id="@+id/guest_button"
            android:layout_width="220dp"
            android:background="@drawable/button_selector"
            android:layout_height="wrap_content"
            android:text="Guest Entry"/>

    </LinearLayout>
</LinearLayout>



